--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,12 @@
     margin: 0 auto;
 }
 
+.divider {
+    width: 60px;
+    height: 2px;
+    background-color: $main-color;
+    margin-top: 25px;
+}
 
 @import 'blocks/promo';
 @import 'blocks/title';
